[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/ui/GameMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/images/outworld/key.png" type="Texture" id=2]
[ext_resource path="res://assets/images/bit.png" type="Texture" id=3]
[ext_resource path="res://src/ui/Text.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/images/items/circle.png" type="Texture" id=5]
[ext_resource path="res://assets/images/items/triangle.png" type="Texture" id=6]
[ext_resource path="res://assets/images/items/square.png" type="Texture" id=7]

[node name="GameMenu" type="Control" index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Visibility" ]

[node name="Panel" type="Panel" parent="." index="0"]

self_modulate = Color( 0.742188, 0.0840759, 0.0840759, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 96.0
margin_top = 32.0
margin_right = 288.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="KeyTexture" type="TextureRect" parent="Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 16.0
margin_right = 48.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Anchor" ]

[node name="BitTexture" type="TextureRect" parent="Panel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 112.0
margin_top = 16.0
margin_right = 128.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Anchor" ]

[node name="KeyLabel" parent="Panel" index="2" instance=ExtResource( 4 )]

margin_left = 48.0
margin_top = 16.0
margin_right = 88.0
margin_bottom = 32.0
text = "x 0"
align = 1
valign = 1

[node name="BitLabel" parent="Panel" index="3" instance=ExtResource( 4 )]

margin_left = 128.0
margin_top = 16.0
margin_right = 168.0
margin_bottom = 32.0
text = "x 0"
align = 1
valign = 1

[node name="CircleTexture" type="TextureRect" parent="Panel" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 64.0
margin_right = 48.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 5

[node name="TriangleTexture" type="TextureRect" parent="Panel" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_top = 64.0
margin_right = 112.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 5

[node name="SquareTexture" type="TextureRect" parent="Panel" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 144.0
margin_top = 64.0
margin_right = 176.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
stretch_mode = 5


